# MossyMesh

./: .dockerignore  50_issues.json  AGENTS.md  CHANGELOG.md  Cargo.toml  ISSUES.md  README.md  create_50_issues.ps1  create_discussions.ps1  docker-compose.yml  workstream.md
.github/workflows/: ci.yml
ai/: Cargo.toml
ai/src/: compute.rs  lib.rs  paged_attention.rs  sitf.rs
captive-portal/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
captive-portal/src/: App.css  App.tsx  index.css
consensus/: Cargo.toml
consensus/src/: crdt.rs  erasure.rs  error.rs  folding.rs  ipld_codec.rs  lib.rs  proof.rs  ring_buffer.rs  snark.rs  trie.rs
devops/: README.md  build-engine-wasm.ps1  build-engine-wasm.sh  cargo-config-engine-wasm.toml  cross-compile.md  deploy-pi.sh  engine-wasm.md  hostapd-dnsmasq.notes.md
docs/: integration-smoke-plan.md  interface-contracts.md  math-htlc-twamm.md  math-minroot-vdf.md  math-snark-folding.md  sla-and-dod.md
engine/: Cargo.toml
engine/examples/: mnps_bench.rs
engine/src/: benchmark.rs  eval.rs  lib.rs  search.rs  tablebase.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Chessboard.css  Chessboard.tsx  ErrorBoundary.tsx  JobSubmit.css  JobSubmit.tsx  NetworkStatus.tsx  NetworkVisualizer.tsx
frontend/src/hooks/: useMeshNetwork.ts
frontend/src/lib/: meshApi.ts
governance/: Cargo.toml
governance/src/: lib.rs  multisig.rs  staking.rs  voting.rs  wot.rs
integration/: Cargo.toml
integration/src/: lib.rs
interop/: Cargo.toml  openapi.yaml
interop/src/: credits.rs  htlc.rs  lib.rs  liquidity.rs  openapi_gateway.rs  twamm.rs
mesh-transport/: Cargo.toml
mesh-transport/src/: battery_tracker.rs  ble_mesh.rs  encryption_layer.rs  hash_chain.rs  honeypot.rs  identity_manager.rs  kademlia_routing.rs  lib.rs  lora_mac.rs  main.rs  network.rs  packet_translator.rs  quarantine.rs  simulation.rs  stun_hole_punch.rs  thermal_aware.rs  topology.rs  vdf_sybil.rs  vrf_assigner.rs  wifi_direct.rs
sandbox/: Cargo.toml
sandbox/src/: admit.rs  host.rs  job.rs  lib.rs  pool.rs  quant.rs  wamr.rs
swarm/: agents.py  main.py  requirements.txt  tasks.py
u/: agent-swarm-status.md  full-info.md  info.md  plan.md
wiki/: Home.md
