[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
reed-solomon-erasure = "6.0"
# Deterministic mock commitments for Nova-style folding (real nova-snark is optional/heavy).
sha2 = "0.10"

# Optional soft-dep for real recursive SNARKs over Pallas/Vesta — not enabled by default
# because it pulls a large proving stack unsuitable for constrained edge CI.
# nova-snark = { version = "0.36", optional = true }

[features]
default = []
# Enable when integrating real nova-snark circuits (feature-gated to avoid breaking trie builds).
# real-nova = ["nova-snark"]
