[package]
name = "mesh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
reticulum-rs = "0.1.0" # NOTE: Using placeholder version, update once available or vendor it as per README
# lxmf-rs = "0.1.0" # Uncomment when lxmf-rs integration starts
# kademlia-dht = "0.1.0" # Placeholder for Kademlia DHT implementation
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "mesh_transport"
path = "src/lib.rs"
