[package]
name = "mesh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "dns", "noise", "yamux", "kademlia", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11.3"
log = "0.4.21"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[lib]
name = "mesh_transport"
path = "src/lib.rs"

[[bin]]
name = "mesh-daemon"
path = "src/main.rs"
